fix className error, hashtags alignment

--- a/src/components/HashtagList/HashtagList.css
+++ b/src/components/HashtagList/HashtagList.css
@@ -12,5 +12,4 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
 }
